@@ -38,6 +38,10 @@ namespace fostlib {
                 reinterpret_cast<const unsigned char *>(right.c_str()),
                 right.length()));
     }
+    /// Allow comparison of strings
+    inline bool crypto_compare(f5::u8view left, f5::u8view right) {
+        return crypto_compare(f5::const_u8buffer(left), f5::const_u8buffer(right));
+    }
     /// Allow us to compare tagged string
     template<typename T, typename U>
     inline bool crypto_compare(
